<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.address.AddressFragment">

    <FrameLayout
        android:id="@+id/frameLayoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCustomSearchFrame"
        android:elevation="4dp"
        android:padding="12dp"
        android:backgroundTint="@color/colorLightBlue"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewAddress"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutAddress"
                android:layout_width="0dp"
                app:layout_constraintRight_toLeftOf="@id/buttonLocation"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_type_address_hint"
                    android:inputType="text"
                    android:longClickable="false"
                    android:maxLines="1"
                    android:textColor="@color/colorGrey" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/buttonLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_my_location_black_24dp"
                android:contentDescription="@string/location"
                />


        </android.support.constraint.ConstraintLayout>


    </FrameLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutInput"
        tools:listitem="@layout/item_list_address_prediction" />

</android.support.constraint.ConstraintLayout>
